# gitlab_gerbenoostra_poetry-monorepo

./: .gitignore  .gitlab-ci.yml  README.md  git_hook_post-checkout  poetry-package.gitlab-ci.yml  pyproject.toml
package-a/: pyproject.toml
package-b/: README.md  pyproject.toml
scripts/: create_local_version.sh  replace_path_deps.sh
service-c/: Dockerfile  README.md  app.py  pyproject.toml
