[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "service-c"
version = "0.1.0"
description = "Provides lambda handler"
license = "MIT"
authors = ["Gerben Oostra <gerben.oostra@gmail.com>"]
readme = "README.md"
include = ["VERSION"]
packages = [{ include = "service_c" }]

[tool.poetry.dependencies]
python = "~3.8"
package-b = {path="../package-b", develop=true}

[tool.poetry.group.dev.dependencies]
mypy = "0.910"
flake8 = "4.0.1"
